--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "wew",
   "version": "0.1.0",
-  "description": "🎉",
+  "description": "wew is a non-complicated functional programming language. 🎉",
   "main": "src/wew.js",
   "repository": "https://github.com/nanalan/wew.git",
-  "author": "alex <16batesa@gmail.com>",
+  "author": "nanalan <16batesa@gmail.com>",
   "license": "MPL-2.0",
-  "bin": "./bin/wew",
+  "directories": {
+    "bin": "bin",
+    "doc": "doc",
+    "lib": "src",
+    "example": "test"
+  },
+  "preferGlobal": true,
   "dependencies": {
-    "nearley": "^2.8.0",
+    "nearley": "2.8.0",
     "tokenizer2": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=6.0.0"
   }
 }
