--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wew",
   "version": "0.1.1",
-  "description": "wew is a non-complicated functional programming language. 🎉",
+  "description": "humanist functional programming language 🎉",
   "main": "src/wew.js",
   "repository": "https://github.com/nanalan/wew.git",
   "author": "nanalan <16batesa@gmail.com>",
