--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "preferGlobal": true,
   "dependencies": {
     "big.js": "^3.1.3",
+    "deep-equal": "^1.0.1",
     "nearley": "2.8.0",
     "tokenizer2": "^2.0.0",
     "yargs": "^7.0.2"
